# reword-vocab-builder

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-skill.sh  pyproject.toml
config/: verb_overrides.yaml
private/backlog/: BL-01.md  BL-02.md  BL-03.md  BL-04.md  BL-05.md  BL-06.md  BL-07.md  BL-08.md  BL-09.md  BL-10.md  BL-11.md  BL-12.md  BL-13.md  BL-14.md  BL-15.md  _README.md
reword_vocab/: __init__.py  backup_reader.py  cli.py  dedup.py  drive_mcp.py  enricher.py  ipa.py
reword_vocab/generators/: __init__.py  source.py  topic.py
rfc/: 000-index.md  002-backup-reader.md  003-drive-fetcher.md  004-verb-detector.md  006-dedup.md  007-topic-generator.md  008-source-mode.md  009-ipa.md  010-enricher.md  011-cli.md  013-tests.md  014-in-chat-first-architecture.md
scripts/: freeze_cmudict.py
skill/: SKILL.md
src/: backup_reader.py  cli.py  csv_writer.py  dedup.py  drive_mcp.py  ipa.py  verb_detector.py
src/generators/: source.py  topic.py
tests/: test_backup_reader.py  test_cli.py  test_csv_writer.py  test_dedup.py  test_drive_mcp.py  test_enricher.py  test_integration_smoke.py  test_ipa.py  test_source.py  test_topic_generator.py  test_verb_detector.py
tests/fixtures/sources/: sample.html  sample.txt
