[project]
name = "reword-vocab-builder"
version = "0.0.1"
description = "Generate Reword-ready English vocabulary CSVs from any topic or source file."
authors = [{ name = "Jared" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Real deps added per BL-NN — see private/backlog/
    "spacy>=3.7",   # BL-04 — POS tagging for verb detection
    "pyyaml>=6.0",  # BL-04 — manual override file (config/verb_overrides.yaml)
]

[project.scripts]
reword-vocab = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
